Removed LOTS of warnings (can we please keep these down? important ones might get lost).